--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,8 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.2.0",
-    "com.unity.entities": "1.0.16",
-    "com.unity.entities.graphics": "1.0.16",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.physics": "1.0.16",
+    "com.unity.netcode.gameobjects": "1.7.1",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
